@@ -85,6 +85,9 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     - Pass PATCH_GET environment varialbe instead of -g0 to the patch command
       in Dpkg::Source::Patch. This allows using non-GNU patch programs, like
       FreeBSD's patch.
+    - Accept an %opts argument for the Dpkg::Control::Info constructor, and
+      accept either passing a filename option as undef, or a scalar undef.
+      Closes: #782019
   * Test suite:
     - Check perl code compilation, warnings and strictness.
     - Fix dpkg-divert unit test to work on BSD «rm -rf» that cannot traverse
